--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,10 +426,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
-  color: #2c3034;
+  color: #ffffff;
+  text-shadow: 2px 2px #030303;
 }
 #hero h2 {
-  color: #2c4964;
+  color: #000000;
   margin: 10px 0 0 0;
   font-size: 24px;
 }
@@ -628,6 +629,7 @@ section {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   padding: 40px 30px;
   width: 100%;
+  height: 340px;
 }
 .why-us .icon-boxes .icon-box i {
   font-size: 40px;
