--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,11 +426,12 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 #hero h2 {
-  color: #000000;
   margin: 10px 0 0 0;
   font-size: 18px;
   text-align: center;
   font-weight: 500;
+  color:white;
+  text-shadow: 2px 1px rgb(6, 25, 147);
 
 }
 #hero .btn-get-started {
@@ -475,11 +476,21 @@ h1, h2, h3, h4, h5, h6 {
   #hero h1 {
     font-size: 30px;
     line-height: 36px;
+    margin-top: 20px;
   }
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
+
+    font-size: 13px;
+    line-height: 17px;
+    margin-bottom: -2px;
+    font-family: sans-serif;
+    font-weight: inherit;
+    font-weight: bold;
+    color:white;
+    text-shadow: 2px 1px rgb(6, 25, 147);
   }
 }
 @media (max-height: 600px) {
