--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1580,4 +1580,10 @@ section {
   text-decoration: none;
 }
 
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  margin-left: 10px;
+}
 /* 8888888888888888 */
