--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,8 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* font-family: "Raleway", 'Times New Roman', Times, serif; */
-  font-family: "Hind",sans-serif;
+  font-family: "Raleway", 'Times New Roman', Times, serif;
+  /* font-family: "Hind",sans-serif; */
   color: black;
 }
 
@@ -168,7 +168,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   font-weight: 700;
   letter-spacing: 0.5px;
-  font-family: "Poppins", 'Times New Roman', Times, serif;
+  /* font-family: Hind, sans-serif; */
+  /* font-family: "Poppins", 'Times New Roman', Times, serif; */
+  font-family: Raleway, "Times New Roman", Times, serif;
 }
 #header .logo a {
   color: #2c4964;
@@ -435,7 +437,8 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 #hero .btn-get-started {
-  font-family: "Raleway", 'Times New Roman', Times, serif;
+  /* font-family: Hind, sans-serif; */
+  font-family: Raleway, "Times New Roman", Times, serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 14px;
@@ -486,7 +489,8 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 13px;
     line-height: 17px;
     margin-bottom: -2px;
-    font-family: sans-serif;
+    /* font-family: Hind, sans-serif; */
+    font-family: Raleway, "Times New Roman", Times, serif;
     font-weight: inherit;
     font-weight: bold;
     color:white;
@@ -865,7 +869,8 @@ section {
 .counts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", 'Times New Roman', Times, serif;
+  /* font-family: Hind, sans-serif; */
+  font-family: Raleway, "Times New Roman", Times, serif;
   font-size: 14px;
 }
 
@@ -1175,7 +1180,8 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: "Poppins", 'Times New Roman', Times, serif;
+  /* font-family: Hind, sans-serif; */
+  font-family: Raleway, "Times New Roman", Times, serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
@@ -1472,7 +1478,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", 'Times New Roman', Times, serif;
+  font-family: Raleway, "Times New Roman", Times, serif;
   color: #777777;
 }
 #footer .footer-top h4 {
