--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Hind",sans-serif;
+ font-family: 'Nunito', sans-serif;
   color: #302525;
   background-color: #e4ebf2
 }
@@ -19,8 +19,8 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", 'Times New Roman', Times, serif;
-  /* font-family: "Hind",sans-serif; */
+  font-family: 'Nunito', sans-serif;
+  /*font-family: 'Nunito', sans-serif; */
   color: black;
 }
 
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.5px;
   /* font-family: Hind, sans-serif; */
   /* font-family: "Poppins", 'Times New Roman', Times, serif; */
-  font-family: Raleway, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 #header .logo a {
   color: #2c4964;
@@ -412,7 +412,7 @@ h1, h2, h3, h4, h5, h6 {
   /* background: url(../img/ddddd.jpg) top center; */
   background-size: cover;
   margin-bottom: -140px;
-  background-color: #6581BF;
+  background-color: #14457b;
 }
 #hero .container {
   position: absolute;
@@ -438,7 +438,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .btn-get-started {
   /* font-family: Hind, sans-serif; */
-  font-family: Raleway, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 14px;
@@ -490,7 +490,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 17px;
     margin-bottom: -2px;
     /* font-family: Hind, sans-serif; */
-    font-family: Raleway, "Times New Roman", Times, serif;
+  font-family: 'Nunito', sans-serif;
     font-weight: inherit;
     font-weight: bold;
     color:white;
@@ -870,7 +870,7 @@ section {
   padding: 0;
   margin: 0;
   /* font-family: Hind, sans-serif; */
-  font-family: Raleway, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
   font-size: 14px;
 }
 
@@ -1181,7 +1181,7 @@ section {
   display: block;
   position: relative;
   /* font-family: Hind, sans-serif; */
-  font-family: Raleway, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
@@ -1461,7 +1461,7 @@ section {
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #fff;
+  background: #14457b;
   box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
 }
 #footer .footer-top .footer-contact {
@@ -1478,7 +1478,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: Raleway, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
   color: #777777;
 }
 #footer .footer-top h4 {
@@ -1593,3 +1593,6 @@ section {
   margin-left: 10px;
 }
 /* 8888888888888888 */
+
+
+/* Side bar */
