--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,18 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5{
   font-family: 'Nunito', sans-serif;
   /*font-family: 'Nunito', sans-serif; */
   color: black;
+ 
+}
+h6 {
+  font-family: 'Nunito', sans-serif;
+  /*font-family: 'Nunito', sans-serif; */
+  color: black;
+  text-align: left;
+ 
 }
 
 /*--------------------------------------------------------------
