--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1604,3 +1604,38 @@ font-family: 'Nunito', sans-serif;
 
 
 /* Side bar */
+
+/* Side Bar */
+.icon-bar {
+  position: fixed;
+  top: 60%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+/* Style the icon bar links */
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.phone {
+  background: #152a76;
+  color: white;
+}
+
+.whatsapp {
+  background: #79d309;
+  color: white;
+}
+
